<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edtNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtEmailUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtTelephoneUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telephone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edtCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Sua senha atual"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtPasswordUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Sua nova senha"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Sua nova senha para confirmação"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSubmitUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>