<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Rótulo para o campo de email -->
        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="Email:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <!-- Espaçamento entre campos -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Rótulo para o campo de senha -->
        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="Senha:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <!-- Espaçamento entre campos -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/txtNotLogged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notAccount"
            android:textColor="#00A6FF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
